module 4 - add SeriLog and ApplicationInsights for CovidNotification and Registration module - add invalid action to patients controller - add call to invalid endpoint in the client app
